# Firebelly-SocialMediaAgent

./: .env.example  .gitignore  FEATURES.md  README.md  docx_content.txt  docx_content_utf8.txt  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  social_media_mvp_features.docx  test.py  yolo
backend/: ai_reply.py  check_db_state.py  check_db_state_pg.py  check_interactions.py  check_latest_webhooks.py  db.py  debug_interactions.py  main.py  models.py  requirements.txt
backend/agents/: content_agent.py  reply_agent.py
backend/config/: cms_client.py  restaurant_config.py
backend/tools/: cms_tools.py  memory_tools.py
frontend/: .env
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AuthShell.tsx
frontend/src/pages/: AccountConnection.tsx  AuthHome.tsx  ContentStudio.tsx  Dashboard.tsx  Inbox.tsx  Login.tsx  OAuthCallback.tsx  PermissionsConsent.tsx  PostComposer.tsx  Signup.tsx  Workspace.tsx
